<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:typeface="http://schemas.android.com/apk/res/com.taxiex"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_margin="@dimen/activity_margin_twenty"
        android:background="@drawable/login_screen_background"
        android:gravity="center"
        android:orientation="vertical" >
        
        <View
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@color/white"
                   />
        
        

        <FrameLayout
            android:id="@+id/frame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/theme_color"
            android:orientation="horizontal" >

            <com.tms.driver.customviews.CustomTextView
                style="@android:style/TextAppearance.DeviceDefault.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:text="@string/forgot_pswd_title"
                android:textStyle="bold"
                android:id="@+id/title"
                android:textColor="@color/title_color"
                android:textSize="@dimen/title_size"
               />

            <com.tms.driver.customviews.CustomTextView
                android:id="@+id/forgot_password_back_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|left"
                android:background="@drawable/selector_back_button"
                android:gravity="center"
              />
        </FrameLayout>

        <com.tms.driver.customviews.CustomEditText
            android:layout_below="@+id/frame"
            android:id="@+id/forgot_password_screen_email_edittext"
            style="@android:style/TextAppearance.DeviceDefault.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_margin"
            android:layout_marginLeft="@dimen/activity_margin"
            android:layout_marginRight="@dimen/activity_margin"
            android:drawableLeft="@drawable/email_icon_profile"
            android:drawablePadding="@dimen/activity_padding"
            android:hint="@string/login_screen_email_hint"
            android:singleLine="true"
            android:padding="5dp"
               android:textColor="@color/text_color"
            android:textColorHint="@color/text_color_hint"
            />

        <com.tms.driver.customviews.CustomButton
            android:id="@+id/forgot_pswd_screen_send_me_button"
            style="@android:style/TextAppearance.DeviceDefault.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_centerHorizontal="true"
          android:layout_alignParentBottom="true"
            android:layout_marginLeft="@dimen/activity_margin_twenty"
            android:layout_marginRight="@dimen/activity_margin_twenty"
            android:layout_marginTop="@dimen/activity_margin_twenty"
            android:background="@drawable/login_button"
            android:text="@string/forgot_pswd_send_me_button"
            android:textColor="@color/button_text_color"
            android:textStyle="bold"
            android:layout_marginBottom="5dp"
       />
    </RelativeLayout>

    <com.tms.driver.customviews.CustomTextView
        style="@android:style/TextAppearance.DeviceDefault.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_margin="@dimen/activity_margin"
        android:lineSpacingExtra="@dimen/activity_margin"
        android:text="@string/forgot_pswd_description"
        android:textColor="@color/info_text_color"
        android:id="@+id/txtInfo"
      
       />

</LinearLayout>